# iiasa-performance-engineering

./: .gitignore  NOTES.md  generate_dot_graphs.sh  generate_expected_results.py  generate_matrices.py  plot_profiles.py  pyproject.toml
assets/: profiles_test_plot.txt  profiles_test_python_mm_plot.txt  profiles_test_tc_get_middle_item_plot.txt  profiles_test_tc_quick_sort_plot.txt  profiles_test_tc_sorted_plot.txt  profiles_test_tc_sum_plot.txt  test_tc_quick_sort[list_0].prof  test_tc_quick_sort[list_1].prof  test_tc_quick_sort[list_2].prof  test_tc_quick_sort[list_3].prof  test_tc_quick_sort[list_4].prof  test_tc_quick_sort[list_5].prof  test_tc_quick_sort[list_6].prof  test_tc_quick_sort[list_7].prof  test_tc_quick_sort[list_8].prof  test_tc_quick_sort[list_9].prof
assets/quick_sort/: test_tc_quick_sort_profile[list_0].prof  test_tc_quick_sort_profile[list_1].prof  (+8 more)
notes/: 0.0_INTRO.md  1.0_ASSEMBLY.md  1.1_BUSES.md  1.2_CPU.md  1.3_NETWORKING.md  2.0_BUSES.md  3.0_CPU.md  3.0_SOFTWARE.md  4.0_NETWORKING.md  5.0_COMPLEXITY.md  5.0_COST_AND_SCALING.md  6.0_PROFILERS.md  6.0_SOFTWARE.md  6.1_PYTHON.md  7.0_COMPLEXITY.md  7.0_EXAMPLES.md  8.0_FIN.md  8.0_PROFILERS.md  9.0_EXAMPLES.md  ANALYSIZING.md  COMPLEXITY.md  INTRODUCTION.md  MEASUREMENTS.md  __2.0_TARGETS.md  __5.0_SUMMARY.md  __SETUP.md
smack/: 0.0_INTRO.md  1.0_OPTIMIZING.md  1.1_OPTIMIZING.md  2.1_TRADE_OFFS.md  2.2_TRADE_OFFS.md  3.0_ERRORS.md  4.0_PROFILERS.md  5.0_SUMMARY_T&E.md
tests/: conftest.py  test_matrix_multiply.py  test_mm_numpy_vs_polars.py  test_python_gil.py  test_time_complexity.py
(+24 files in other folders)
