[tool.poetry]
name = "iiasa-performance-engineering"
version = "0.1.0"
description = ""
authors = ["Max Wolschlager <rxtx@ungut.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0 || >3.11.0,<4.0"
pytest = "^8.3.3"
polars = "^1.8.2"
snakeviz = "^2.2.0"
pytest-benchmark = {extras = ["histogram"], version = "^5.1.0"}
numpy = "^2.1.1"
ruff = "^0.6.8"
pandas = "^2.2.3"
gprof2dot = "^2024.6.6"
matplotlib = "^3.9.2"
memray = "^1.14.0"
pytest-memray = "^1.7.0"
mpl-ascii = "^0.10.0"
smack = {git = "ssh://git@github.com/meksor/smack", rev = "main"}
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
